--- a/css task 1sameer.html
+++ b/css task 1sameer.html
@@ -3,7 +3,7 @@
     <title>css element seletctor</title>
    <head> <style> 
         /* Element selector */
-         h1{  
+         h1{   
             font-family: Arial, Helvetica, sans-serif; 
             text-align: center;
             background-color: brown;
@@ -22,8 +22,10 @@
             <body> <h1> cascading style sheet</h1>
             <p> css stands for cascading style sheet.it is  </p>
             <h3> types of css</h3>
-            <ol> 
-                
+            <ol type = "I">
+                <li> java full stack</li>
+                <li>html</li>
+                <lI>DATA</lI>
             </ol>
         </body>
  </html>
